--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,11 +19,18 @@ services:
     env_file:
       - .env
     ports:
-      - "5000:5000"
+      - "5001:5000"
     depends_on:
       - db
     volumes:
       - .:/app
+    environment:
+      # Environment setup
+      PYTHONUNBUFFERED: 1
+      PYTHONPATH: /app
+      FLASK_APP: main:app
+      FLASK_RUN_HOST: 0.0.0.0
+      FLASK_RUN_PORT: 5000
 
 volumes:
   postgres_data:
