--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,10 +16,11 @@ services:
   api:
     build: .
     command: flask run --host=0.0.0.0 --port=5000
+    working_dir: /app
     env_file:
       - .env
     ports:
-      - "5001:5000"
+      - "5000:5000"
     depends_on:
       - db
     volumes:
