--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,6 @@ services:
       PYTHONPATH: /code  
       FLASK_RUN_HOST: 0.0.0.0
       FLASK_RUN_PORT: 5000
-
+      DATABASE_URI: postgresql+psycopg2://postgres:postgres@db:5432/subscription_db
 volumes:
   postgres_data:
